--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1,5 +1,12 @@
 @import "@{templateCommon}/basekit-bootstrap.less";
 
+@import "@{templateLocal}/css/common-forms.less";
+@import "@{templateLocal}/css/widgets-blog.less";
+@import "@{templateLocal}/css/widgets-menu.less";
+@import "@{templateLocal}/css/widgets-ecom.less";
+
+@desktop: ~"only screen and (min-width : 769px)";
+
 body {
   background-color: @color-swatch1;
 }
@@ -11,12 +18,12 @@ body {
 
 .widget.content {
   a {
-  font-family:@font-swatch2-font-family;
-  font-size:@font-swatch5-font-size;
-  font-weight:@font-swatch5-font-weight;
-  color:@color-swatch3;
-  text-decoration: none;
-}
+    font-family:@font-swatch2-font-family;
+    font-size:@font-swatch5-font-size;
+    font-weight:@font-swatch5-font-weight;
+    color:@color-swatch3;
+    text-decoration: none;
+  }
 
   a:hover {
     text-decoration: underline;
@@ -112,70 +119,6 @@ body {
     top: 24px;
     left: 2px;
   } 
-}
-
-
-/* ===============================
-   BLOG
-   =============================== */
-
-.blog-post-feature-image-wrap {
-	line-height: 0;
-	background-size: cover;
-	background-position: center;
-	border: 1px solid @color-swatch2;
-	width: 100%;
-	height: 250px;
-	margin-bottom: 10px;
-	img {
-		display: none;
-	}
-}
-
-.blog-post-item {
-	padding-bottom: 20px;
-}
-
-input[type="search"]::-webkit-search-decoration {
-	display: none;
-}
-
-.blog-search-form {
-	label {
-		display: block;
-	}
-}
-
-/* ===============================
-   MENU
-   =============================== */
-
-.menu-item-image-wrap {
-	width: 100%;
-	height: 200px;
-	border: 1px solid @color-swatch2;
-	background-size: cover;
-	background-position: center;
-	img {
-		display: none;
-	}
-}
-
-.menu .menu-items li.menu-item-promoted {
-	padding: 8px 14px;
-	background: fadeout(@color-swatch2, 90%);
-}
-
-.menu-item-nutritional-title {
-	color: darken(@color-swatch2, 25%);	
-}
-.dietary-icon {
-	color: darken(@color-swatch2, 25%);
-	text-decoration: underline;
-}
-
-.menu-subsection {
-	background: fadeout(@color-swatch2, 90%);
 }
 
 
@@ -383,23 +326,24 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
   background-color: lighten(@color-swatch4,2%);
   min-height: 150px;
   color: @color-swatch1;
+  .widget.content, .widget.profile {
+    h1, h2, h3, h4 {
+      color: @color-swatch1;
+      padding-bottom: 20px;
+    }
+    p {
+      font-family: @font-swatch5-font-family;
+      color: lighten(@color-swatch5,10%);
+      line-height:@font-swatch5-line-height;
+      padding-bottom: 20px;
+    } 
+    span {
+      color: @color-swatch1;
+    }
+  }
 }
 
-.bk-footer h1, .bk-footer h2, footer h3, .bk-footer h4 {
-  color: @color-swatch1;
-  padding-bottom: 20px;
-}
 
-.bk-footer p {
-  font-family: @font-swatch5-font-family;
-  color: lighten(@color-swatch5,10%);
-  line-height:@font-swatch5-line-height;
-  padding-bottom: 20px;
-}
-
-.bk-footer span {
-  color: @color-swatch1;
-}
 
 /* ===============================
    EXTENDED NAVIGATION
@@ -514,6 +458,7 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
 .widget.feature .content {
   height: 500px;
   text-align: center;
+  padding: 0.5em 0;
 }
 
 /* FEATURE TITLE */
@@ -557,32 +502,7 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
 .widget.feature button
 {
   margin: 1em 0;
-  padding: 12px 18px;
-  border: 0;
-  -webkit-border-radius: 2px;
-     -moz-border-radius: 2px;
-          border-radius: 2px;
-  box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2);
-
-  font-family: @font-swatch2-font-family;
-  font-size: 1em;
-  font-weight:@font-swatch7-font-weight;
-  background-color: @color-swatch3;
-  color: @color-swatch1;
-  text-decoration: none;
-  text-shadow: 0 1px 0px rgba(0,0,0,0.3);
 }
-
-.widget.feature button:hover 
-{
-  background-color: darken(@color-swatch2,5%);
-  cursor: pointer;
-  -webkit-transition: background-color 0.15s ease-in-out;
-  -moz-transition: background-color 0.15s ease-in-out;
-  -o-transition: background-color 0.15s ease-in-out;
-  transition: background-color 0.15s ease-in-out;
-}
-
 
 .widget.feature button span {
     vertical-align: baseline;
@@ -593,84 +513,23 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
    CLICK TO CALL WIDGET
    =============================== */
 
-.widget.clicktocall a {
-  
-  font-family: @font-swatch5-font-family;
-  font-weight:@font-swatch5-font-weight;
-  color: @font-swatch5-color;
-  letter-spacing: @font-swatch5-letter-spacing;
-  font-size: @font-swatch5-font-size;
-  text-decoration: none;
+.widget.clicktocall {
+  a, a:hover {
+    padding: 0 1.6em;
+    padding-left: 50px;
+    background-position: 18px center;
+    @media @desktop {
+        padding: 0;
+        border: none;
+        box-shadow: none;
+        border-radius: 0;
+        color: @font-swatch5-color;
+        background: transparent;
+        text-shadow: none;
+      }
+  }
 }
 
-.widget.clicktocall a:hover {
-  cursor: pointer;
-}
-
-
-
-/* ===============================
-   PAYPAL BUTTON
-   =============================== */
-
-
-.widget.paypalbuynow .widget.button.paypal {
-   -webkit-border-radius: 2px;
-     -moz-border-radius: 2px;
-          border-radius: 2px;
-    box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.4);
-   text-shadow: 0 1px 0px rgba(0,0,0,0.3);
- }
-
- .widget.paypalbuynow .widget.button.paypal:hover {
-   background-color: darken(@color-swatch2,5%);
- }
-
- /* ===============================
-   DROPBOX BUTTON
-   =============================== */
-
- .widget.dropbox button  {
-   -webkit-border-radius: 2px;
-     -moz-border-radius: 2px;
-          border-radius: 2px;
-    box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.4);
-   text-shadow: 0 1px 0px rgba(0,0,0,0.3);
- }
- 
-
-/* ===============================
-   BUTTON CSS
-   =============================== */
-
-.widget.button {
-    padding: 4px 0;
-}
-
-.widget.button button
-{
-  padding: 5px 8px;
-  margin: 0;
-  border: 0;
-  -webkit-border-radius: 2px;
-     -moz-border-radius: 2px;
-          border-radius: 2px;
-  box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.4);
-
-  font-family: @font-swatch7-font-family;
-  font-size: @font-swatch7-font-size;
-  font-weight:@font-swatch7-font-weight;
-  background-color: @color-swatch3;
-  color: @font-swatch7-color;
-  text-decoration: none;
-  text-shadow: 0 1px 0px rgba(0,0,0,0.3);
-}
-
-.widget.button button:hover 
-{
-  background-color: darken(@color-swatch2,5%);
-  cursor: pointer;
-}
 
 
 /* ===============================
@@ -881,130 +740,122 @@ hr.line {
    =============================== */
 
 
+
+
+@twitterProfilePicSize: 98px;
+
 .widget.twitter {
-    background-color: lighten(@color-swatch5,22%);
-    padding: 20px;
+  background-color: lighten(@color-swatch5,22%);
+   padding: 20px 20px 0 20px;
+  ul.twitter {
+    border-radius: 4px;
+    li {
+      position: relative;
+      min-height: 120px;
+      border-bottom: 1px solid lighten(@color-swatch5,16%);
+      margin-bottom: 20px;
+      padding-bottom: 20px;
+
+      &:last-child {
+        border-bottom: none;
+        margin-bottom: 0;
+        padding-bottom: 0;
+      }
+      // footer
+      a, time + span, time {
+        font-size: bkscale(@font-swatch5-font-size, 0.8);
+        font-family: @font-swatch5-font-family;
+        line-height: 1;
+        font-weight: normal;
+        color: darken(@color-swatch5, 16%);
+        text-decoration: none;
+        @media @mobile {
+          font-size: bkscale(@font-swatch5-font-size, 0.6);
+        }
+      }
+      // profile pic
+      .twitter-profile-pic {
+        width: @twitterProfilePicSize;
+        height: @twitterProfilePicSize;
+        display: block;
+        position: absolute;
+        left: 0;
+        top: 0;
+        @media @mobile {
+          width: (@twitterProfilePicSize * 0.55);
+          height: (@twitterProfilePicSize * 0.55);
+        }
+        
+        img {
+          width: 100%;
+          height: auto;
+          display: block;
+        }
+      }
+      .twitter-content {
+        line-height: 1.2em;
+        margin-left: (@twitterProfilePicSize + 20);
+        @media @mobile {
+          margin-left: (@twitterProfilePicSize * 0.55 + 12);
+        }
+        .bk-full-name {
+          color: @color-swatch3;
+          font-size: bkscale(@font-swatch5-font-size, 1);
+          @media @mobile {
+            font-size: bkscale(@font-swatch5-font-size, 0.8);
+          }
+        }
+        p {
+          font-family: @font-swatch5-font-family;
+          color: darken(@font-swatch5-color,40%);
+          a {
+            font-family: @font-swatch5-font-family;
+            font-size: @font-swatch5-font-size;
+            color: @color-swatch4;
+            line-height: @font-swatch5-line-height;
+          }
+        }
+      }
+    }
+  }
 }
 
-.widget.twitter a {
-   color: @color-swatch4;
-   font-size:@font-swatch5-font-size;
-   text-decoration: none;
-}
 
-.widget.twitter a:hover {
-    text-decoration: underline;
-}
 
-.widget.twitter ul {
-    padding: 0px;
-    margin: 0;
-}
 
-.widget.twitter ul li {
-    border-bottom: none;
-    list-style: none;
-    font-family: @font-swatch5-font-family;
-    font-size: @font-swatch5-font-size;
-    color: @font-swatch5-color;
-    padding-bottom: 30px;
-}
 
-.widget.twitter ul li:last-child {
-    padding-bottom: 0px;
-}
 
-.widget.twitter .twitter-profile-pic {
-    float: left;
-    margin-right: 20px;
-    height: 100px;
-}
 
-.widget.twitter .twitter-content span.bk-full-name {
-    font-family: @font-swatch4-font-family;
-    color: @color-swatch3;
-    font-weight: bold;
-}
+
+
+
+
+
+
+
+
+
+
+
 
 /* ===============================
    CONTACT FORM WIDGET
    =============================== */
 
-.widget.contactform form {
+.contactform.widget {
+  form {
     display: block;
     padding: 20px;
     margin-bottom: 20px;
     background-color: lighten(@color-swatch5,22%);
-}
-
-.widget.contactform fieldset {
-    border: none;
-    padding: 0;
-}
-
-.widget.contactform fieldset label {
-    width: 100%;
-    float: left;
-    font-family:@font-swatch4-font-family;
-    font-size:font-swatch4-font-size;
-    font-weight:@font-swatch4-font-weight;
-    line-height:@font-swatch4-line-height;
-    color:@font-swatch4-color;
-    letter-spacing: @font-swatch4-letter-spacing;
-}
-
-.widget.contactform fieldset input {
-    height: 40px;
-    width: 100%;
-    padding: 0;
-    border: 1px solid lighten(@color-swatch5,10%);
-    font-family: @font-swatch5-font-family;
-    font-size: @font-swatch5-font-size;
-    color: @font-swatch5-color;
-    text-indent: 8px;
-    margin-top: 6px;
-    margin-bottom: 30px;
-}
-
-.widget.contactform fieldset textarea {
-    height: 100px;
-    width: 100%;
-    border: 1px solid lighten(@color-swatch5,10%);
-    font-family: @font-swatch5-font-family;
-    font-size: @font-swatch5-font-size;
-    color: @font-swatch5-color;
-    text-indent: 8px;
-    padding: 14px 0px 0px 0px;
-    margin-top: 6px;
-    margin-bottom: 20px;
-    resize: none;
-}
-
-.widget.contactform fieldset button.btn {
-    padding: 4px 8px;
+  }
+  fieldset {
     margin: 0;
-    border: 0;
-    -webkit-border-radius: 2px;
-       -moz-border-radius: 2px;
-            border-radius: 2px;
-    box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.4);
-
-    font-family: @font-swatch2-font-family;
-    font-size: 1em;
-    font-weight:@font-swatch7-font-weight;
-    background-color: @color-swatch3;
-    color: @color-swatch1;
-    text-decoration: none;
-    text-shadow: 0 1px 0px rgba(0,0,0,0.3);
-    position: relative;
-    top: -1px;
+  }
+  .form-group {
+    margin-bottom: 1em;
+  }
 }
-  
-.widget.contactform fieldset button.btn:hover {
-  background-color: darken(@color-swatch2,5%);
-  cursor: pointer;
-}
-
 
 
 /* ===============================
@@ -1015,36 +866,6 @@ hr.line {
    padding: 14px 0; 
 }
 
-.widget.tweet a {
-  padding: 8px 10px 8px 38px;
-  margin: 0;
-  border: none;
-  background-repeat: no-repeat;
-  background-position: 10px;
-  margin: 0em;
-  border: 0;
-  -webkit-border-radius: 2px;
-     -moz-border-radius: 2px;
-          border-radius: 2px;
-  box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.4);
-  text-shadow: 0 1px 0px rgba(0,0,0,0.3);
-
-  font-family: @font-swatch7-font-family;
-  font-size:.9em;
-  font-weight:@font-swatch7-font-weight;
-  background-color: @font-swatch7-background-color;
-  color: @font-swatch7-color;
-  text-decoration: none;
-}
-
-.widget.tweet a:hover, .tweet a:active {
-  padding: 8px 10px 8px 38px;
-  background-repeat: no-repeat;
-  background-position: 10px;
-  cursor: pointer;
-  background-color: @color-swatch2;
-  cursor: pointer;
-}
 
 
 /* ==================================
@@ -1201,64 +1022,9 @@ hr.line {
   margin: 0;
 }
 
-.widget.profile form label {
-  display: none;
-  width: 100%;
-  float: left;
-  margin-bottom: 6px;
-  font-family: @font-swatch5-font-family;
-  font-size: @font-swatch5-font-size;
-  font-weight: 300;
-  line-height: @font-swatch5-line-height;
-  color: lighten(@font-swatch5-color,15%);
-  letter-spacing: @font-swatch5-letter-spacing;
-}
 
-.widget.profile form input {
-  height: 42px;
-  background-color: darken(@color-swatch4,3%);
-  border: 1px solid darken(@color-swatch4,13%);
-  font-family: @font-swatch5-font-family;
-  font-size: @font-swatch5-font-size;
-  font-weight: @font-swatch5-font-weight;
-  line-height: @font-swatch5-line-height;
-  color: lighten(@font-swatch5-color,25%);
-  letter-spacing: @font-swatch5-letter-spacing;
-  text-indent: 16px;
-  -webkit-border-radius: 3px;
-   -moz-border-radius: 3px;
-        border-radius: 3px;
-}
 
-.widget.profile form input:focus {
-  outline: none;
-}
 
-.widget.profile form button,
-.widget.signupform button {
-	line-height: 12px;
-	height: 40px;
-	padding: 16px 10px;
-	margin: 0;
-    border: 0;
-    -webkit-border-radius: 2px;
-    -moz-border-radius: 2px;
-        border-radius: 2px;
-    box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.4);
-
-    font-family: @font-swatch2-font-family;
-    font-size:.8em;
-    font-weight:@font-swatch7-font-weight;
-    background-color: @color-swatch3;
-    color: @color-swatch1;
-    text-decoration: none;
-    text-shadow: 0 1px 0px rgba(0,0,0,0.3); 
-}
-
-.widget.profile form button:hover {
-    cursor: pointer;
-    background-color: darken(@color-swatch2,5%)
-}
 
 
 
@@ -1291,69 +1057,10 @@ hr.line {
   margin: 0;
 }
 
-.widget.signupform label {
-    float: left;
-    width: 100%;
-    margin-bottom: 10px;
-    font-family:@font-swatch1-font-family;
-    font-size:font-swatch4-font-size;
-    font-weight:@font-swatch4-font-weight;
-    line-height:@font-swatch4-line-height;
-    color:@color-swatch4;
-    letter-spacing: @font-swatch4-letter-spacing;
-}
 
-.widget.signupform fieldset input,
-.blog-search-input {
-    width: 42%;
-    background-color: lighten(@color-swatch5,22%);
-    /*background-color: lighten(@color-swatch5,46%);*/
-    border: 1px solid lighten(@color-swatch5,15%);
-    font-family: @font-swatch5-font-family;
-    font-size: @font-swatch5-font-size;
-    color: @font-swatch5-color;
-    text-indent: 12px;
-    -webkit-border-radius: 3px;
-     -moz-border-radius: 3px;
-          border-radius: 3px;
-}
 
-.widget.signupform fieldset input {
-	height: 41px;
-}
 
-.widget.signupform fieldset input:focus {
-  outline: none;
-}
 
-.widget.signupform button,
-.blog-search-submit-button {
-	height: 39px;
-    padding: 15px 10px;
-    margin: 0;
-    border: 0;
-    -webkit-border-radius: 2px;
-       -moz-border-radius: 2px;
-            border-radius: 2px;
-    box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.4);
-
-    font-family: @font-swatch2-font-family;
-    font-size:.8em;
-    font-weight:@font-swatch7-font-weight;
-    background-color: @color-swatch3;
-    color: @color-swatch1;
-    text-decoration: none;
-    text-shadow: 0 1px 0px rgba(0,0,0,0.3);
-}
-
-.widget.signupform button:hover {
-  cursor: pointer;
-  background-color: darken(@color-swatch2,5%);
-}
-
-.widget.signupform button:active {
-  box-shadow: inset 0 0 6px rgba(255,255,255,0.9);
-}
 
 
 
@@ -1598,9 +1305,7 @@ hr.line {
     font-size: .9em;
   }
 
-  .widget.signupform fieldset input {
-    width: 52%;
-  }
+
 
    /* GALLERY */
 
@@ -1682,40 +1387,14 @@ hr.line {
 
   /* CLICK TO CALL */
 
-  .widget.clicktocall {
-    padding: 10px 0px;
-  }
+  
 
   .widget.clicktocall a {
     background-image: image('/images/ic-call.png');
-    background-color: @color-swatch3;
-    background-position: 10px;
-    background-repeat:no-repeat;
-    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);
-    padding: 10px 10px 10px 38px;
-    border: 0;
-    margin: 2.2em auto;
-    letter-spacing: 0;
-    -webkit-border-radius: 2px;
-       -moz-border-radius: 2px;
-            border-radius: 2px;
-
-    font-family: @font-swatch2-font-family;
-    font-size:1em;
-    font-weight:@font-swatch7-font-weight;
-    color: @color-swatch1;
-    text-decoration: none;
-    text-shadow: 0 1px 0px rgba(0,0,0,0.3);
   }
   
   .widget.clicktocall a:hover {
     background-image: image('/images/ic-call.png');
-    background-color: @color-swatch2;
-    background-position: 10px;
-    color: @color-swatch1;
-    padding: 10px 10px 10px 38px;
-    cursor: pointer;
-    text-decoration: none;
   }
 
 
