--- a/stylesheet.less
+++ b/stylesheet.less
@@ -128,6 +128,9 @@ body {
 
 .main {
   padding: 40px 0;
+  .widget {
+    clear: both;
+  }
 }
 
 body.edit .widget.navigation, body.edit .widget.extendednavigation {
