--- a/stylesheet.less
+++ b/stylesheet.less
@@ -616,15 +616,49 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
    GALLERY WIDGET
    =============================== */
 
-.gallery {
+
+
+
+.widget.gallery {
+ 
   .inner {
     background-color: @color-swatch1;
     .title, .description {
-      color: @color-swatch4;
+      
+      color: @font-swatch5-color;
     }
   }
-}
+  .image-data {
+    background: @color-swatch7;
+    display: block;
+    -webkit-transform: scale(0.1);
+    -moz-transform: scale(0.1);
+    -o-transform: scale(0.1);
+    -ms-transform: scale(0.1);
+    transform: scale(0.1);
+    -webkit-transition: all 0.26s ease-in-out;
+    -moz-transition: all 0.26s ease-in-out;
+    -o-transition: all 0.26s ease-in-out;
+    transition: all 0.26s ease-in-out;
+    opacity: 0;
+    position: absolute;
+    left: 14px;
+    right: 14px;
+    top: 14px;
+    bottom: 14px;
+    height: auto;
+    overflow: hidden;
 
+  }
+  .inner:hover .image-data {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -o-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    opacity: 1;
+  }
+}
 
 
 .widget.gallery
