--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1,11 +1,15 @@
 @import "@{templateCommon}/basekit-bootstrap.less";
 
 @import "@{templateLocal}/css/common-forms.less";
+@import "@{templateLocal}/css/common-text.less";
 @import "@{templateLocal}/css/widgets-blog.less";
 @import "@{templateLocal}/css/widgets-menu.less";
 @import "@{templateLocal}/css/widgets-ecom.less";
 
+// Larget than tablet
 @desktop: ~"only screen and (min-width : 769px)";
+// Larger than mobile
+@mobile-up: ~"only screen and (min-width : 480px)";
 
 body {
   background-color: @color-swatch1;
@@ -34,57 +38,7 @@ body {
     padding: 0 0 10px;
   }
 
-  h1 {
-    font-family:@font-swatch1-font-family;
-    font-weight: @font-swatch1-font-weight;
-    color:@font-swatch1-color;
-    line-height:@font-swatch1-line-height;
-    letter-spacing: @font-swatch1-letter-spacing;
-    font-size: @font-swatch1-font-size;
-  }
-
-  h2
-  {
-    font-family:@font-swatch2-font-family;
-    font-size: @font-swatch2-font-size;
-    font-weight: @font-swatch2-font-weight;
-    line-height:@font-swatch2-line-height;
-    color: @font-swatch2-color;
-    letter-spacing: @font-swatch2-letter-spacing;
-    a {
-      font-size: @font-swatch2-font-size;
-    }
-  }
-
-  h3
-  {
-    font-family:@font-swatch3-font-family;
-    font-size:@font-swatch3-font-size;
-    font-weight: @font-swatch3-font-weight;
-    color: @font-swatch3-color;
-    line-height:@font-swatch3-line-height;
-    letter-spacing: @font-swatch3-letter-spacing;
-  }
-
-  h4
-  {
-    font-family:@font-swatch4-font-family;
-    font-size:@font-swatch4-font-size;
-    font-weight:@font-swatch4-font-weight;
-    line-height:@font-swatch4-line-height;
-    color:@font-swatch4-color;
-    letter-spacing: @font-swatch4-letter-spacing;
-  }
-
-  p
-  {
-    font-family:@font-swatch5-font-family;
-    font-size:@font-swatch5-font-size;
-    font-weight: @font-swatch5-font-weight;
-    line-height:@font-swatch5-line-height;
-    color:@font-swatch5-color;
-    letter-spacing: @font-swatch5-letter-spacing;
-  }
+  
 
   ul, ol, li {
     font-family:@font-swatch5-font-family;
@@ -521,7 +475,7 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
     padding: 0 1.6em;
     padding-left: 50px;
     background-position: 18px center;
-    @media @desktop {
+    @media @mobile-up {
         padding: 0;
         border: none;
         box-shadow: none;
@@ -624,8 +578,10 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
   .inner {
     background-color: @color-swatch1;
     .title, .description {
-      
       color: @font-swatch5-color;
+    }
+    .title {
+      font-weight: bold;
     }
   }
   .image-data {
@@ -661,51 +617,97 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
 }
 
 
-.widget.gallery
-{
-  
-  width: 101.2%;
-  margin-left: -0.5%;
-}
 
-.widget.gallery ul {
-    display:block;
+// ======= Widget: Yelp Review
+.widget.yelpreview {
+  // reset
+  ul, li, dl, dt, dd {
+    list-style-type: none;
+    padding: 0;
     margin: 0;
-    padding:0px;
-    list-style: none;
+  }
+  ul.yelpreview li {
+    margin-bottom: 2em;
+    &:last-of-type {
+      margin-bottom: 0;
+    }
+  }
+  .review-body {
+    .rating {
+      display: inline-block;
+      vertical-align: middle;
+      margin-right: 1em;
+      background: #fff;
+      padding: 4px 3px 0 4px;
+      border-radius: 4px;
+
+      img {
+
+      }
+    }
+    .created {
+      display: inline-block;
+      vertical-align: middle;
+      color: @color-swatch5;
+
+    }
+    .review {
+      display: block;
+      margin-top: 0.5em;
+      background: mix(@color-swatch6, @color-swatch1, 10%);
+      font-family: @font-swatch5-font-family;
+      font-size: @font-swatch5-font-size;
+      font-weight: @font-swatch5-font-weight;
+      line-height: @font-swatch5-line-height;
+      color: darken(@color-swatch5, 30%);
+      letter-spacing: @font-swatch5-letter-spacing;
+      padding: 24px;
+      position: relative;
+      margin-bottom: 30px;
+
+      @media @mobile {
+        font-size: bkscale(@font-swatch5-font-size, 0.8);
+        line-height: bkscale(@font-swatch5-line-height, 0.8);
+      }
+
+      &:after {
+        content: "";
+        width: 0;
+        height: 0;
+        border-style: solid;
+        border-width: 24px 24px 0 0;
+        border-color: mix(@color-swatch6, @color-swatch1, 10%) transparent transparent transparent;
+        position: absolute;
+        top: 100%;
+        left: 24px;
+      }
+    }
+    .reviewer {
+      margin: 24px 0 0.5em 24px;
+      font-size: bkscale(@font-swatch5-font-size, 1);
+      @media @mobile {
+        font-size: bkscale(@font-swatch5-font-size, 0.8);
+      }
+    }
+    .review-link {
+      margin-left: 24px;
+      font-size: bkscale(@font-swatch5-font-size, 0.8);
+      a { 
+        background-color: @color-swatch3;
+        color: @color-swatch1;
+        padding: 0.2em 0.7em;
+        &:hover {
+          text-decoration: none;
+          background-color: @font-swatch7-background-color-hover;
+        }
+      }
+    }
+  }
 }
 
-.widget.gallery li {
-    float: left;
-    position: relative;
-    width: 33.3%;
-    padding-bottom: 33%;
-}
 
 
 
-
-.widget.gallery li span.inner a {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-}
-
-/* Lightbox */
-
-.lb-data .lb-caption, .lb-data .lb-number {
-  font-family:@font-swatch5-font-family;
-  font-size:@font-swatch5-font-size;
-  font-weight: @font-swatch5-font-weight;
-  line-height:@font-swatch5-line-height;
-  color:lighten(@font-swatch5-color,50%);
-}
-
-.lb-data .lb-number {
-  font-size:bkscale(@font-swatch5-font-size,0.9);
-}
 
 /* ===============================
    DIVIDER WIDGET
@@ -775,11 +777,13 @@ hr.line {
       border-bottom: 1px solid lighten(@color-swatch5,16%);
       margin-bottom: 20px;
       padding-bottom: 20px;
+      @media @mobile {
+        min-height: 80px;
+      }
 
       &:last-child {
         border-bottom: none;
         margin-bottom: 0;
-        padding-bottom: 0;
       }
       // footer
       a, time + span, time {
@@ -846,9 +850,180 @@ hr.line {
 
 
 
+/* ===============================
+   RESPONSIVE SLIDESHOW WIDGET
+   =============================== */
 
 
+.widget.responsiveslideshow {
+  .slideshow-image-list {
+    margin: 0 0;
+  }
+  .slideshow-widget-controls {
+    padding-top: 20px;
+    padding-bottom: 40px;
+    margin-top: 0;
+    -webkit-user-select: none;  
+    -moz-user-select: none;     
+    -ms-user-select: none; 
+    @media @mobile {
+      padding-top: 5px;
+      padding-bottom: 5px;
+    }
+  }
+  // Dot
+  .slideshow-widget-controls .dot {
+    &:not(.selected) {
+      cursor: pointer;
+    }
+    border-radius: 50%;
+    margin: 0 6px;
+    background: @color-swatch1;
+    border: 4px solid @color-swatch3;
+    &.selected {
+      background: @color-swatch3;
+      border: 4px solid @color-swatch3;
+    }
+    &:hover:not(.selected) {
+      border: 2px solid @color-swatch3;
+    }
+    @media @mobile {
+      width: 8px;
+      height: 8px;
+      border: 2px solid @color-swatch3;
+    }
+  }
+  .slideshow-widget {
+    -webkit-user-select: none;  
+    -moz-user-select: none;    
+    -ms-user-select: none;
 
+    // Buttons prev/next
+    .btn-next, .btn-prev {
+      width: 60px;
+      height: 60px;
+      overflow: hidden;
+      text-indent: 110%;
+      white-space: nowrap;
+      // Intentionally§ not using a color swatch
+      background-color:  #fff;
+      opacity: .8;
+      &:hover {
+        opacity: 1;
+      }
+      @media @mobile {
+        width: 35px;
+        height: 35px;
+      }
+      
+      &:after {
+        display: block;
+        content: "";
+        width: 34px;
+        height: 34px;
+        text-align: center;
+        position: absolute;
+        color: #000;
+        background-image: image('/images/ui-slide-arrows.png');
+        background-color: @color-swatch3;
+        position: absolute;
+        top: 50%;
+        margin: -17px 0 0 -17px;
+      }
+      &:hover:after {
+        background-color: darken(@color-swatch2, 10%);
+      }
+    }
+
+    .btn-next {
+      right: 0;
+      &:after {
+        background-position: right 0;
+        left: 52%;
+      }
+    }
+
+    .btn-prev {
+      left: 0;
+      &:after {
+        left: 48%;
+      }
+    }
+
+
+    // Button play
+    .btn-play {
+      background-color:  @color-swatch3;
+      color: @color-swatch1;
+      min-width: 30px;
+      top: 0;
+      left: 0;
+      width: 60px;
+      opacity: .8;
+      &:hover {
+        opacity: 1;
+      }
+     
+      @media @mobile {
+        width: 35px;
+        height: 35px;
+      }
+      &:after {
+        font-size: 16px;
+        @media @mobile {
+          font-size: 20px;
+          line-height: 35px;
+        }
+      }
+      &:hover {
+        background-color: darken(@color-swatch2, 10%);
+      }
+    }
+  }
+  .content-wrapper {
+    // (Appears even without content)
+    position:absolute;
+    bottom:0;
+    left:0;
+    right:0;
+    top:auto;
+    background-color: fade(@color-swatch1, 90%); 
+    .title, .description {
+      display: inline-block;
+      float: left;
+      padding: 3px 16px;
+      color: @color-swatch5;
+    }
+    .title {
+      font-weight: bold;
+      color: darken(@color-swatch2, 30%);
+      font-family: @font-swatch8-font-family;
+      font-size: bkscale(@font-swatch5-font-size, 1.2);
+      line-height: bkscale(@font-swatch5-line-height, 1.2);
+    
+      @media @mobile {
+        font-size: bkscale(@font-swatch5-font-size, 0.8);
+        line-height: bkscale(@font-swatch5-line-height, 0.8);
+      }
+    }
+    .description {
+      clear: both;
+      color: darken(@color-swatch5, 30%);
+      font-size: bkscale(@font-swatch5-font-size, 1);
+      line-height: bkscale(@font-swatch5-line-height, 1);
+      
+      @media @mobile {
+        font-size: bkscale(@font-swatch5-font-size, 0.7);
+        line-height: bkscale(@font-swatch5-line-height, 0.8);
+      }
+    }
+
+    .title + .description {
+      padding-top: 0;
+      margin-top: -0.5em;
+    }
+  }
+}
 
 
 
@@ -995,6 +1170,113 @@ hr.line {
 
 
 
+// ======= Widget: Sign up form
+.widget.signupform {
+ 
+
+  
+  .widget.signupform fieldset {
+    padding: 0;
+    border: 0;
+    margin: 0;
+  }
+
+
+  .form-group {
+    // Flex
+    display: -webkit-box;
+      display: -moz-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-box-direction: normal;
+      -moz-box-direction: normal;
+      -webkit-box-orient: horizontal;
+      -moz-box-orient: horizontal;
+      -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+      flex-direction: row;
+      -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+      -webkit-box-pack: justify;
+      -moz-box-pack: justify;
+      -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+      justify-content: space-between;
+      -webkit-align-content: stretch;
+      -ms-flex-line-pack: stretch;
+      align-content: stretch;
+      -webkit-box-align: center;
+      -moz-box-align: center;
+      -webkit-align-items: center;
+      -ms-flex-align: center;
+      align-items: center;
+
+     
+
+      label {
+        // Flex
+      -webkit-box-ordinal-group: 1;
+        -moz-box-ordinal-group: 1;
+        -webkit-order: 0;
+        -ms-flex-order: 0;
+        order: 0;
+        -webkit-box-flex: 0;
+        -moz-box-flex: 0;
+        -webkit-flex: 0 1 auto;
+        -ms-flex: 0 1 auto;
+        flex: 0 1 auto;
+        -webkit-align-self: auto;
+        -ms-flex-item-align: auto;
+        align-self: auto;
+
+      // Layout
+        float: none;
+        width: auto;
+        margin: 0 1em 0 0;
+
+        @media @mobile {
+          display: block;
+          width: 100%;
+        }
+    }
+
+    input.email {
+       -webkit-box-ordinal-group: 1;
+        -moz-box-ordinal-group: 1;
+        -webkit-order: 0;
+        -ms-flex-order: 0;
+        order: 0;
+        -webkit-box-flex: 1;
+        -moz-box-flex: 1;
+        -webkit-flex: 1 1 auto;
+        -ms-flex: 1 1 auto;
+        flex: 1 1 auto;
+        -webkit-align-self: auto;
+        -ms-flex-item-align: auto;
+        align-self: auto;
+    }
+    button {
+       -webkit-box-ordinal-group: 1;
+        -moz-box-ordinal-group: 1;
+        -webkit-order: 0;
+        -ms-flex-order: 0;
+        order: 0;
+        -webkit-box-flex: 0;
+        -moz-box-flex: 0;
+        -webkit-flex: 0 1 auto;
+        -ms-flex: 0 1 auto;
+        flex: 0 1 auto;
+        -webkit-align-self: auto;
+        -ms-flex-item-align: auto;
+        align-self: auto;
+    }
+  }
+}
+  
+
+
 /* ===============================
    PROFILE WIDGET
    =============================== */
@@ -1064,153 +1346,9 @@ hr.line {
 }
 
 
-/* ===============================
-   SIGNUP FORM WIDGET
-   =============================== */
-
-.widget.signupform {
-  padding: 0px;
-}
-
-.widget.signupform fieldset {
-  padding: 0;
-  border: 0;
-  margin: 0;
-}
 
 
 
-
-
-
-
-
-/* ===============================
-   SLIDESHOW WIDGET
-   =============================== */
-.widget.responsiveslideshow {
-    .slideshow-image-list,
-    .slideshow-widget {
-        min-height: 450px;
-        @media @tablet {
-            min-height: 350px;
-        }
-        @media @mobile {
-            min-height: 280px;
-            height: 280px;
-        }
-    }
-    .title,
-    .description {
-        display: block;
-        font-size: 15px;
-        padding: 5px 0 5px 10px;
-    }
-    .description {
-      padding-top: 0;
-      @media @mobile {
-        display: none;
-      }
-    }
-    .content-wrapper {
-        background: rgba(0,0,0,0.5);
-    }
-    .slideshow-widget {
-        /* Arrows */
-        .btn-prev,
-        .btn-next {
-            font-size: 0;
-            z-index: 11;
-            text-indent: -99999px;
-            width: 40px;
-            height: 40px;
-            background: rgba(0,0,0,0.5);
-            -webkit-border-radius: 50%;
-            -moz-border-radius: 50%;
-            border-radius: 50%;
-            @media @mobile {
-                width: 30px;
-                height: 30px;
-            }
-        }
-        .btn-prev {
-            &:after {
-                content: "\2190";
-                color: #fff;
-                top: 7px;
-                @media @mobile {
-                    top: 1px;
-                }
-            }
-        }
-        .btn-next {
-            &:after {
-                content: "\2192";
-                color: #fff;
-                top: 7px;
-                @media @mobile {
-                    top: 1px;
-                }
-            }
-        }
-        /* Play Button */
-        .btn-play {
-            background: rgba(0,0,0,0.5);
-            -webkit-border-radius: 4px;
-            -moz-border-radius: 4px;
-            border-radius: 4px;
-            &:after {
-                color: #fff;
-                letter-spacing: -4px;
-                top: 0;
-            }
-        }
-    }
-    /* Slideshow Controls */
-    .slideshow-widget-controls {
-        .dot {
-            width: 11px;
-            height: 11px;
-            -webkit-border-radius: 50%;
-            -moz-border-radius: 50%;
-            border-radius: 50%;
-            &.selected {
-                background-color: @color-swatch5;
-            }
-        }
-    }
-}
-
-.widget.responsiveslideshow .btn-play:after {
-    font-size:20px;
-}
-
-.widget.responsiveslideshow .slideshow-widget .btn-play {
-    background: rgba(0,0,0,0.5);
-    font-size: 0;
-    text-indent: -99999px;
-    position: absolute;
-    cursor: pointer;
-    z-index: 12;
-    width: 42px;
-    height: 42px;
-    top: -5%;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-    @media @mobile {
-        width: 30px;
-        height: 30px;
-    }
-}
-
-.widget.responsiveslideshow .slideshow-widget .btn-play:after {
-    top:-7px;
-    @media @mobile {
-        top: -12px;
-    }
-}
 
 /* ===============================
    IPAD WIDTH
@@ -1328,7 +1466,6 @@ hr.line {
 
 
 
-   /* GALLERY */
 
 
   .widget .extendednavigation ul.align-right li.folder:after {
@@ -1338,21 +1475,9 @@ hr.line {
 
 }
 
-@media only screen and (max-width : 650px) and (min-width : 481px) {
-   /* Tablet view: 2 tiles */
-   .widget.gallery li {
-      width: 50%;
-      padding-bottom: 50%;
-   }
-}
 
-@media only screen and (max-width : 1050px) and (min-width : 651px) {
-   /* Small desktop / ipad view: 3 tiles */
-   .widget.gallery li {
-      width: 33.3%;
-      padding-bottom: 33.3%;
-   }
-}
+
+
 
 /* ===============================
    IPHONE WIDTH
@@ -1402,37 +1527,11 @@ hr.line {
   }
 
 
-  /* CLICK TO CALL */
-
-  
-
-  .widget.clicktocall a {
-    background-image: image('/images/ic-call.png');
-  }
-  
-  .widget.clicktocall a:hover {
-    background-image: image('/images/ic-call.png');
-  }
 
 
-   .widget.responsiveslideshow .slideshow-image-list, 
-  .widget.responsiveslideshow .slideshow-widget {
-    height:200px;
-    min-height:initial;
-  }
-
-  
-   /* GALLERY */
+ 
 
 
-
-
-
-  /* Smartphone view: 1 tile */
-  .widget.gallery li {
-      width: 100%;
-      padding-bottom: 100%;
-  }
 }
 
 @media only screen and (min-width: 1140px) {
