--- a/css/widgets-blog.less
+++ b/css/widgets-blog.less
@@ -4,7 +4,6 @@
 
 // ======= Widget: BlogSearch
 .widget.blogsearch {
-	
     form {
 		.form-group {
 			// Flex
@@ -55,7 +54,12 @@
 		    -ms-flex-item-align: auto;
 		    align-self: auto;
 		    // Appearance
-		    margin-right: 1em;	   
+		    margin-right: 1em;
+		    margin-bottom: 0;	   
+
+		    @media @mobile {
+		    	width: 100%;
+		    }
         }
         input {  
         	// Flex
@@ -115,7 +119,8 @@
 			}
 
 			.blog-post-feature-image-wrap {
-				height: 370px;
+				height: 0;
+				padding-bottom: 40%;
 				background-size: cover;
 				background-position: center;
 				z-index: 1000;
@@ -164,10 +169,7 @@
 				}
 			}
 			.blog-post-date {
-				float: right;	
-				time {
-					font-size: @font-swatch5-font-size;
-				}			
+				float: right;				
 				
 			}
 		}
@@ -220,12 +222,7 @@
 			    	font-size: bkscale(@font-swatch1-font-size, 0.7);
 				    line-height: bkscale(@font-swatch1-line-height, 0.7);
 			    }
-			    @media @mobile {
-			    	font-size: bkscale(@font-swatch1-font-size, 0.5);
-				    line-height: bkscale(@font-swatch1-line-height, 0.5);
-				    padding: 0.8em;
-				    margin-bottom: 20px;
-			    }
+			   
 			}
 			// Content
 			.blog-post-content, .blog-post-body {
@@ -245,7 +242,7 @@
 			time.blog-post-publish-date {
 				color: @color-swatch5;
 				font-size: @font-swatch5-font-size;
-				border-bottom: 1px solid  lighten(@color-swatch5,20%);
+				border-bottom: 1px solid  fade(@color-swatch5,20%);
 				display: block;
 				float: right;
 				width: 30%;
@@ -260,7 +257,7 @@
 			}
 			// Category
 			div.blog-post-category {
-				border-bottom: 1px solid  lighten(@color-swatch5,20%);
+				border-bottom: 1px solid  fade(@color-swatch5,20%);
 				float: right;
 				width: 30%;
 				padding: 1em 0;
@@ -304,10 +301,11 @@
 						a {
 							display: inline-block;
 							padding: 0em 0.7em;
-							border-radius: 5px;
 							background-color: @font-swatch7-background-color;
 							color: @font-swatch7-color;
 							letter-spacing: 1px;
+							border-radius: 3px;
+							box-shadow: 0px 2px 0px darken(@color-swatch3,10%);
 
 							&:hover {
 								text-decoration: none;
