--- a/css/common-forms.less
+++ b/css/common-forms.less
@@ -84,8 +84,8 @@
 .widget input[type="email"],
 .productlist-filter .productlist-search input,
 .signupform fieldset input {
-	background-color: darken(@color-swatch4,3%);
-	border: 1px solid darken(@color-swatch4,13%);
+	background-color: lighten(@color-swatch5,22%);
+	border: 1px solid lighten(@color-swatch5,15%);
 	border-radius: 3px;
 	padding: 0 1em;
 	margin-right: 0.6em;
@@ -94,7 +94,7 @@
 	line-height: (@font-swatch7-font-size * 2.5 + 1);
     font-family: @font-swatch5-font-family;
     font-size: @font-swatch5-font-size;
-    color: lighten(@font-swatch5-color,35%);
+    color: @font-swatch5-color;
 	font-weight: @font-swatch5-font-weight;
 
 	@media only screen and (max-width : 460px) {
@@ -102,7 +102,6 @@
 		height: (@font-swatch7-font-size * 2);
 		line-height: (@font-swatch7-font-size * 2);
 	} 
-
 
 	&:hover {
 		
@@ -115,6 +114,12 @@
 		box-shadow: 0 0 5px @color-swatch3;
 	}
 }
+
+
+.contactform input.email, .contactform textarea {
+	background-color: @color-swatch1;
+}
+
 
 .contactform textarea {
 	line-height: bkscale(@font-swatch7-line-height, 0.7);
@@ -179,8 +184,8 @@
 		-moz-box-sizing: border-box;
 		box-sizing: border-box;
 
-		background-color: darken(@color-swatch4,3%);
-		border: 1px solid darken(@color-swatch4,13%);
+		background-color: lighten(@color-swatch5,22%);
+		border: 1px solid lighten(@color-swatch5,15%);
 
 		@media only screen and (max-width : 460px) {
 			font-size: bkscale(@font-swatch7-font-size, 0.75);
