Basket Summary button fix

--- a/css/widgets-ecom.less
+++ b/css/widgets-ecom.less
@@ -810,7 +810,7 @@
 					position: absolute;
 					right: 20px;
 					display: block;
-					top: 20px;
+					top: 10px;
 					line-height: 30px;
 					text-align: center;
 					font-size: bkscale(@font-swatch5-font-size, 0.8);
@@ -839,18 +839,18 @@
 					}
 					button {
 						font-family: @font-swatch5-font-family;
+						font-size: @font-swatch5-font-size;
 						font-weight: 700;
 						font-size: 16px;
 						line-height: 40px;
 						border: none;
 						cursor: pointer;
 						padding: 0;
-						background-color: @color-swatch3;
-						color: @color-swatch1;
 						position: absolute;
 						top: 0;
 						width: 40px;
 						height: 40px;
+						box-shadow: none;
 
 
 						@media @mobile {
@@ -859,16 +859,12 @@
 							line-height: 30px;
 						}
 
-						&:hover {
-							background-color: darken(@color-swatch2, 10%);
-						}
-
 						&.js-remove {
-							border-radius: 5px 0 0 5px;
+							border-radius: 2px 0 0 2px;
 							left: 0;
 						}
 						&.js-add {
-							border-radius: 0 5px 5px 0;
+							border-radius: 0 2px 2px 0;
 							right: 0;
 						}
 					}
