Search post button spacing when inside the column widget

--- a/css/widgets-blog.less
+++ b/css/widgets-blog.less
@@ -78,7 +78,7 @@
 		    -ms-flex-item-align: auto;
 		    align-self: auto;
         }
-
+	
         button {
         	// Flex
             -webkit-box-ordinal-group: 1;
@@ -97,6 +97,10 @@
 
 		    position: relative;
 		    top: 0px;
+		    .widget.responsivecolumns & {
+				margin-top: 5px;
+				margin-bottom: 5px;
+		    }
         }
     }
 }
