--- a/css/widgets-blog.less
+++ b/css/widgets-blog.less
@@ -1,4 +1,4 @@
-blog-post-metadata// BLOG WIDGETS =============================================================================================
+// BLOG WIDGETS =============================================================================================
 @bp-blog-compact: ~"only screen and (max-width : 1000px)";
 @bp-blog-small: ~"only screen and (max-width : 800px)";
 
