Twitter Widget spacing (DT-1267)

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -730,7 +730,7 @@ hr.line {
 
 .widget.twitter {
   background-color: lighten(@color-swatch5,22%);
-   padding: 20px 20px 0 20px;
+   padding: 20px;
   ul.twitter {
     border-radius: 4px;
     li {
