DT-1301 removed padding on the address widget in the footer

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -254,6 +254,9 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
       line-height:@font-swatch5-line-height;
       padding-bottom: 20px;
     } 
+    p.address{
+      padding-bottom: 0;
+    }
     span {
       color: @color-swatch1;
     }
