DT-1301 changed class name

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -254,7 +254,7 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
       line-height:@font-swatch5-line-height;
       padding-bottom: 20px;
     } 
-    p.address{
+    .bk-profile-address p {
       padding-bottom: 0;
     }
     span {
