Fixing colour swatch for hide/expand button of Content Widget

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -492,6 +492,9 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
     border-radius: 4px;*/
     cursor: pointer;
     display: inline-block;
+    .less, .more {
+      color: @font-swatch7-color;
+    }
 }
 
 .widget.content span.expand:hover,
