Fonecta contact form widget styles

--- a/css/common-forms.less
+++ b/css/common-forms.less
@@ -49,7 +49,7 @@
 		padding: 0 16px;
 		font-size: bkscale(@font-swatch7-font-size, 0.75);
 		line-height: (@font-swatch7-font-size * 2);
-	} 
+	}
 
 	&:hover {
 		background-color: darken(@color-swatch2,5%);
@@ -86,7 +86,9 @@
 .widget input[type="text"],
 .widget input[type="email"],
 .productlist-filter .productlist-search input,
-.signupform fieldset input {
+.signupform fieldset input,
+.fonectacontactform input,
+.fonectacontactform textarea {
 	background-color: lighten(@color-swatch5,22%);
 	border: 1px solid lighten(@color-swatch5,15%);
 	border-radius: 3px;
@@ -104,10 +106,10 @@
 		font-size: bkscale(@font-swatch7-font-size, 0.75);
 		height: (@font-swatch7-font-size * 2);
 		line-height: (@font-swatch7-font-size * 2);
-	} 
+	}
 
 	&:hover {
-		
+
 	}
 
 	&:focus {
@@ -119,12 +121,15 @@
 }
 
 
-.contactform input.email, .contactform textarea {
+.contactform input.email, .contactform textarea,
+.fonectacontactform .form-group input,
+.fonectacontactform textarea {
 	background-color: @color-swatch1;
 }
 
 
-.contactform textarea {
+.contactform textarea,
+.fonectacontactform textarea {
 	line-height: bkscale(@font-swatch7-line-height, 0.7);
 	min-height: 10em;
 	padding-top: 0.6em;
@@ -133,7 +138,7 @@
 		line-height: bkscale(@font-swatch7-line-height, 0.5);
 		padding-top: 0.5em;
 		padding-bottom: 0.5em;
-	} 
+	}
 }
 
 // Labels
@@ -141,7 +146,8 @@
 .signupform fieldset label,
 .blog-search-form label,
 .widget.ecomcheckout .delivery label,
-.ecom-product-vartitle {
+.ecom-product-vartitle,
+.fonectacontactform label {
     font-family:@font-swatch4-font-family;
     font-size: @font-swatch4-font-size;
     font-weight:@font-swatch4-font-weight;
@@ -153,7 +159,7 @@
     @media only screen and (max-width : 460px) {
 		line-height: bkscale(@font-swatch4-line-height, 0.8);
 		font-size:bkscale(@font-swatch4-font-size, 0.8);
-	} 
+	}
 }
 
 
@@ -189,11 +195,11 @@
 		@media only screen and (max-width : 460px) {
 			font-size: bkscale(@font-swatch7-font-size, 0.75);
 			height: (@font-swatch7-font-size * 2);
-		} 
+		}
 
 		&:hover {
 			border-color: @color-swatch2;
-			
+
 		}
 
 		&:focus {
@@ -227,7 +233,15 @@ input::-moz-placeholder {  /* Firefox 19+ */
    color: mix(@color-swatch5, @color-swatch2, 16%);
 }
 
-input:-ms-input-placeholder {  
+input:-ms-input-placeholder {
    color: mix(@color-swatch5, @color-swatch2, 16%);
+}
+
+
+// Fonecta checkboxes
+
+.fonectacontactform input[type="checkbox"] {
+	height: auto;
+	width: auto;
 }
 
