--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1020,7 +1020,8 @@ hr.line {
    CONTACT FORM WIDGET
    =============================== */
 
-.contactform.widget {
+.contactform.widget,
+.fonectacontactform {
   form {
     display: block;
     padding: 20px;
@@ -1314,8 +1315,8 @@ hr.line {
   background-color: lighten(@color-swatch5,22%);
 }
 
-.widget.map .map {
-
+.fonectamap {
+  margin-bottom: 20px;
 }
 
 
