IE11 logo overflow fix for PIRATE-4050

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -240,6 +240,7 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
   display: inline-block;
   vertical-align: middle;
   margin-right: 10px;
+  max-width: 100%;
   .logo, img {
     line-height: 0;
   }
