--- a/home.twig
+++ b/home.twig
@@ -16,7 +16,7 @@
     {{widget('feature', 'featurehome', {"header": "profile", "strapline":"profile", "buttonText":"Lorem Ipsum","defaultBgImg": asset('images/feature-bg.jpg'), 'positionTopPercentage': '50','showBtn': true})|raw}}
 </section>
 
-<div class="main wrapper clearfix">
+<div class="main clearfix">
     {{zone('main')|raw}}
 </div>
 
