--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1500,12 +1500,6 @@ hr.line {
     margin: 0;
   }
 
-
-
-
-
-
-
 }
 
 @media only screen and (min-width: 1140px) {
@@ -1528,5 +1522,5 @@ hr.line {
 }
 
 
+// Migration files
 @import "@{templateLocal}/migration/migration.less";
-@import "@{templateLocal}/migration/migration-colour.less";
