Inital twig fix commit

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -4,6 +4,26 @@
 // -----------------------------
 
 
+#migrated-site {
+
+
+// Stylseheet overrides
+// -----------------------------
+
+
+.main.wrapper {
+    width: 100%;
+    margin: 0;
+}
+.main {
+    padding: 0;
+}
+
+.widget.content {
+    overflow: inherit;
+}
+
+
 
 
 // Site Layout and Spacing
@@ -31,6 +51,7 @@
 }
 
 
+.empty-zone,
 #page-zones__main:empty {
     margin-top: 40px;
     margin-bottom: 40px;
@@ -52,14 +73,7 @@
     width: 90%;
 }
 
-.edit #page-zones__main-overlay.empty-zone {
-    margin-top: 40px;
-    margin-bottom: 40px;
-    min-height: 40px;
-    position: relative;
-}
 
-.edit #page-zones__main-overlay + .widget:not(.row),
 #page-zones__main > .widget:not(.row):first-child,
 #page-zones__main > .row + .widget:not(.row) {
     margin-top: 40px;
@@ -68,8 +82,10 @@
         margin-top: 20px;
     }
 }
- 
-#page-zones__main > .widget:not(.row):last-child {
+
+
+#page-zones__main > .widget:not(.row):last-child,
+#page-zones__main > .row + .widget:not(.row) {
     margin-bottom: 40px;
     
     @media @tablet {
@@ -78,9 +94,4 @@
 }
 
 
-
-// Widgets
-// -----------------------------
-
-
-
+}
